# amazon-ads-api

./: main.py  pyproject.toml  pytest.ini  t.py
src/ads_api/: __init__.py  auth.py  base.py  enums.py  setting.py  util.py
src/ads_api/accounts/: account.py  profile.py
src/ads_api/ads_v1/: ad_groups.py  ad_groups_global.py  ads.py  ads_global.py  base.py  campaigns.py  campaigns_global.py  campaigns_global_type.py  campaigns_type.py  common_type.py  enums.py  exception.py
src/ads_api/ads_v1/sp/: ad_groups.py  ads.py  campaigns.py  targets.py
src/ads_api/ads_v1/sp/types/: ad_groups.py  ads.py  ads_type.py  campaigns.py  common.py  enums.py  targets.py  targets_type.py
src/ads_api/ads_v1/sp_global/: ad_groups.py  ads.py  campaigns.py
src/ads_api/ads_v1/sp_global/types/: ad_groups.py  ads.py  ads_type.py  campaigns.py  campaigns_type.py  common.py  enums.py
src/ads_api/ads_v1/types/: ad_groups_global_type.py  ad_groups_type.py  ads_global_type.py  ads_type.py  common_type.py  enums.py
src/ads_api/discovery/: base.py  targetable_entities.py
src/ads_api/discovery/types/: enums.py  targetable_entities.py
src/ads_api/v3/: keywords.py
src/ads_api/v3/types/: keywords.py
tests/: conftest.py  test_account.py  test_campaign.py  test_profile.py  test_test.py
tests/accounts/: test_account.py  test_profile.py
tests/ads_v1/sp/: ad_groups.py  campaigns.py  targets.py
tests/ads_v1/sp_global/: ad_groups.py  ads.py  campaigns.py
tests/discovery/: targetable_entities.py
tests/v3/: keywords.py
